--- a/Verbose/Verbose.csproj
+++ b/Verbose/Verbose.csproj
@@ -1,20 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
-    <Version>0.0.1</Version>
+    <TargetFrameworks>net4.7.1;net5.0</TargetFrameworks>
+    <ProjectName>Verbose</ProjectName>
+    <!--<Version>0.0.1-alpha</Version>-->
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <Authors>Fred Haslam</Authors>
+    <Company>Fred Haslam</Company>
+    <Description>
+      Tools to support Verbose Assertion in C-Sharp.
+      see: https://github.com/fwhaslam/VerboseCSharp
+    </Description>
+    <!--<AssemblyName>$(ProjectName)_$(Version)</AssemblyName>-->
+    <PackageId>Verbose</PackageId>
+    <UserSecretsId>70edb541-7ee0-4461-bca7-6e057db968e4</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.10.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.5" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.5" />
-    <PackageReference Include="coverlet.collector" Version="3.0.3">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-    <PackageReference Include="xunit.assert" Version="2.4.1" />
   </ItemGroup>
+
+  <!--<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="VerboseDeployNugetPackage.bat" />
+  </Target>-->
 
 </Project>
