--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+################################ development shop specific ignores ################################
+
+.idea/
+
+################################ ################################ ################################
+
 # User-specific files
 *.rsuser
 *.suo
