--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,8 +3,19 @@
   <!-- properties shared by all projects in solution -->
 
   <PropertyGroup>
-    <Version>0.0.2-alpha</Version>
+    
+    <!-- multi framework builds -->
+    <TargetFrameworks>net4.7.1;net5.0</TargetFrameworks>
+    
+    <!--- '-alpha' means prerelease vesion -->
+    <Version>0.0.3-alpha</Version>
+    
+    <!-- name of project which contains the nupkg for deployment -->
     <ProjectKey>Verbose</ProjectKey>
+    
+    <!-- shared dependency versions -->
+    <MSTest_Version>2.2.7</MSTest_Version>
+    
   </PropertyGroup>
 
 </Project>
