--- a/VerboseTests/VerboseTests.csproj
+++ b/VerboseTests/VerboseTests.csproj
@@ -1,12 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net4.7.1</TargetFramework>
-    <!--<Version>0.0.1-alpha</Version>-->
+    <!--<TargetFrameworks>net4.7.1;net5.0</TargetFrameworks>-->
   </PropertyGroup>
   
   <ItemGroup>
     <ProjectReference Include="..\Verbose\Verbose.csproj" />
+    
+    <!-- necessary for net5.0 testing -->
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+
+    <!-- necessary for net4.7.1 testing -->
+    <PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
+    <PackageReference Include="MSTest.TestFramework" Version="2.2.7" />
+    
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
