--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -8,7 +8,7 @@
     <TargetFrameworks>net4.7.1;net5.0</TargetFrameworks>
     
     <!--- '-alpha' means prerelease vesion -->
-    <Version>0.0.3</Version>
+    <Version>0.0.4-alpha</Version>
     
     <!-- name of project which contains the nupkg for deployment -->
     <ProjectKey>Verbose</ProjectKey>
