--- a/VerboseCSharp/VerboseCSharp.csproj
+++ b/VerboseCSharp/VerboseCSharp.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <!--<TargetFrameworks>net4.7.1;net5.0</TargetFrameworks>-->
-    <ProjectName>Verbose</ProjectName>
+    <ProjectName>$(ProjectKey)</ProjectName>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Authors>Fred Haslam</Authors>
     <Company>Fred Haslam</Company>
@@ -11,7 +11,7 @@
       see: https://github.com/fwhaslam/VerboseCSharp
     </Description>
     <!--<AssemblyName>$(ProjectName)_$(Version)</AssemblyName>-->
-    <PackageId>Verbose</PackageId>
+    <PackageId>$(ProjectKey)</PackageId>
     <UserSecretsId>70edb541-7ee0-4461-bca7-6e057db968e4</UserSecretsId>
   </PropertyGroup>
 
@@ -20,7 +20,13 @@
       This includes Test-Only dependencies.
   -->
   <ItemGroup>
+    <PackageReference Include="DiffPlex" Version="1.7.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'net5.0'">
+    <PackageReference Include="VCDiff">
+      <Version>4.0.1</Version>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
