--- a/VerboseCSharpTests/VerboseCSharpTests.csproj
+++ b/VerboseCSharpTests/VerboseCSharpTests.csproj
@@ -13,6 +13,8 @@
     <!-- necessary for net4.7.1 testing -->
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.7" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.7" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="YamlDotNet" Version="13.1.1" />
     
   </ItemGroup>
 
