--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -7,8 +7,8 @@
     <!-- multi framework builds -->
     <TargetFrameworks>net4.7.1;net5.0</TargetFrameworks>
     
-    <!--- '-alpha' means prerelease vesion -->
-    <Version>0.0.6-alpha</Version>
+    <!--- '-alpha' means prerelease version -->
+    <Version>1.0.0</Version>
     
     <!-- name of project which contains the nupkg for deployment -->
     <ProjectKey>VerboseCSharp</ProjectKey>
