--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,16 +5,15 @@
   <PropertyGroup>
     
     <!-- multi framework builds -->
-    <TargetFrameworks>net4.7.1;net5.0</TargetFrameworks>
+    <TargetFrameworks>net48;net6.0</TargetFrameworks>
     
     <!--- '-alpha' means prerelease version -->
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     
     <!-- name of project which contains the nupkg for deployment -->
     <ProjectKey>VerboseCSharp</ProjectKey>
-    
-    <!-- shared dependency versions -->
-    <MSTest_Version>2.2.7</MSTest_Version>
+
+    <LangVersion>8.0</LangVersion>
     
   </PropertyGroup>
 
